[project]
name = "geoart"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "develmusa", email = "contact@develmusa.digital" }
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.5",
    "pandas>=2.2.3",
    "numpy>=2.2.1",
    "pillow>=11.1.0",
    "scipy>=1.15.1",
    "streamlit>=1.41.1",
    "geopy>=2.4.1",
    "streamlit-plotly-mapbox-events>=0.1.2",
    "streamlit-keplergl>=0.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"geoart" = "geoart.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/geoart"]
